--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -84,15 +84,36 @@ button:hover {
   display: flex;
   flex-direction: column;
   width: 360px;
-  min-height: 200px;
+  height: auto;
   border: 1px solid #808080;
 }
 
-.image {
-  display: flex;
+.card-link {
+  display: block;
 }
 
-.description {
+.image {
+  display: block;
+  width: 100%;
+  height: 152px;
+  object-fit: cover;
+}
+
+.card-description {
   display: flex;
-  flex-direction: row;
+  padding: 4px 0;
+  justify-content: space-around;
+}
+
+.name {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33333;
+  text-align: center;
+}
+
+.value {
+  font-size: 12px;
+  line-height: 2;
+  text-align: center;
 }
